[tool.poetry]
name = "apitesting"
version = "0.1.0"
description = "Api test framework with requests and pytest"
authors = ["gancaoer <1578801708@qq.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
pytest = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
